# Madera.tools

./: .env.example  .gitignore  Dockerfile  FRONTEND.md  IMPLEMENTATION.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  STATUS.md  TEST-REPORT.yaml  TEST-SUMMARY.md  TESTING-TODO.md  TESTING.md  TEST_RESULTS.md  TREE.txt  alembic.ini  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  run_tests.sh  start.sh  stop.sh  test_phase3_tools.py  test_tools_manual.py
.claude/: CLAUDE.md  DATABASE.yaml  GOTCHAS.yaml  MCP-SERVER.yaml  PATHS.yaml  PATTERNS.yaml  STORAGE.yaml  TOOLS.yaml
alembic/: env.py
alembic/versions/: 2025_01_16_0000-initial_schema.py
e2e-tests/: 01-api-backend.spec.js  02-upload-page.spec.js  03-training-workflow.spec.js  04-validation-page.spec.js  05-settings-validation.spec.js
madera/: config.py  database.py
madera/core/: vision.py
madera/mcp/: categories.py  registry.py  server.py
madera/mcp/tools/: base.py
madera/mcp/tools/advanced/: __init__.py  compress_pdf.py  count_signatures.py  detect_bank_statement_type.py  detect_form_fields.py  extract_urls.py  generate_thumbnail.py  images_to_pdf.py  pdf_to_images.py
madera/storage/: minio_client.py
madera/training/: __init__.py  bot.py
madera/training/agents/: claude_agent.py  gemini_agent.py  openai_agent.py
madera/web/: app.py
madera/web/routes/: api.py  dashboard.py  settings.py  training.py
madera/web/templates/: base.html  dashboard.html  settings.html  settings_tabbed.html  templates.html  testing.html  tools.html
tests/: __init__.py  conftest.py  test_hints_tools.py  test_mcp_server.py
(+52 files in other folders)
